# KRApi

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml
app/: layout.tsx
app/docs/: layout.tsx  page.tsx  template.tsx
app/docs/[...test]/: page.tsx
app/download/: page.tsx
app/visualize/: page.tsx
components/: Home.tsx  Navbar.tsx
components/docs/: Chapter.tsx  DocNav.tsx  DocSection.tsx  GettingStarted.tsx  Page.tsx
constants/: chapters.ts
migrations/2023-05-17-171629_users/: up.sql
src/: cli.rs  lib.rs  main.rs  schema.rs
src/models/: users.rs
src/routes/: create_user.rs  get_users.rs  greet.rs  mod.rs
src/routes/user/: create_user.rs  get_user.rs  get_users.rs  match_user.rs  mod.rs  update_password.rs  update_user.rs
src/utils/: establish_connection.rs  generate_users.rs  get_pool.rs  hash.rs  mod.rs  response.rs  run_migrations.rs  server_error.rs
styles/: doc-nav.scss  docs.scss  home.scss  main.scss  navbar.scss
styles/utils/: mixins.scss  vars.scss
types/: chapter.ts
