[package]
name = "krapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.71"
argon2 = "0.5.0"
chrono = {version="0.4.24", features = ["serde"]}
clap = {version="4.2.7", features = ["derive"]}
diesel = {version="2.0.4",features = ["sqlite", "r2d2", "chrono", ]}
diesel_migrations = {version="2.0.0", features = ["sqlite"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.17"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
